// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - FIRST - beforeEnter 1`] = `1`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - FIRST - thunk 1`] = `1`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - history_index 1`] = `0`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": true,
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": true,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - response 1`] = `
Object {
  "location": Object {
    "kind": "redirect",
    "status": 302,
    "url": "/redirected",
  },
  "status": 302,
  "type": "REDIRECTED",
  "url": "/redirected",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hasSSR": true,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - title 1`] = `""`;
